# opf

./: .gitignore  PRODUCT.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: opf-ci.yml  publish-cli-npm.yml  publish-cli-pypi.yml  publish-sdk-go.yml  publish-sdk-mcp.yml
cli/node/: CHANGELOG.md  package.json  tsconfig.json  tsup.config.ts
cli/python/: pyproject.toml
cli/python/scripts/: stage_vendor.py
cli/python/src/pptx_cli/: __main__.py
docs/: BACKLOG.md  catalog-schema-reference.md  content-item-design-overrides.md  content-payloads.md  examples.md  schema-reference.md
docs/migrations/: 0.2.0.md
docs/plans/: example-suite-expansion.md  layout-placeholders.md  layout-taxonomy.md
examples/: grid-spans.opf.json  media-and-placeholder.opf.json  media-and-prompt.opf.json  root-content.opf.json  rows-chart.opf.json  table-and-code.opf.json
examples/gallery/: README.md
examples/technical/: README.md  asset-source-forms.opf.json  block-composition.opf.json  catalog-overrides.opf.json  chart-data-sources.opf.json  chart-type-sampler.opf.json  columns.opf.json  content-payload-matrix.opf.json  design-backgrounds.opf.json  header-footer-logo-set.opf.json  language-and-writing.opf.json  media-and-follow-up.opf.json  metadata-array-forms.opf.json  minimal.opf.json  narrative-beats.opf.json  promoted-region-grid.opf.json  rich-text-runs.opf.json  slide-design-overrides.opf.json  slide-sections.opf.json  table-cell-types.opf.json
go/: README.md  client_test.go  doc.go  go.mod
legacy/: README.md
legacy/go/: api.go  client.go  errors.go  types.go
legacy/mcp/: tsup.config.ts
legacy/python/: pyproject.toml
legacy/typescript/: package.json
legacy/workflows/: publish-sdk-python.yml  publish-sdk-typescript.yml
mcp/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
mcp/src/: server.ts  stdio.ts
python/: .gitignore  README.md  pyproject.toml
python/src/pptx_dev/: __init__.py  opf.py  types.py
python/src/pptx_dev/integrations/: __init__.py  langchain.py
python/tests/: test_smoke.py
scripts/: check-text-integrity.mjs  generate-example-suite.mjs  generate-schema-docs.mjs  regenerate-layouts.mjs  validate-examples.mjs
spec/: audience.schema.json  chart.schema.json  color-scheme.schema.json  defaults.json  font-scheme.schema.json  language.schema.json  layout.schema.json  narrative.schema.json  openapi.yaml  opf.schema.json  presentation.schema.json  purpose.schema.json  social.schema.json  theme.schema.json  tone.schema.json
spec/audiences/: all-hands.json  board.json  candidates.json  customers.json  engineering-team.json  executives.json  index.json  investors.json  marketing-team.json  regulators.json  sales-team.json
spec/charts/: 100pct-bullet-bar-2x.json  100pct-bullet-bar-3x.json  100pct-bullet-bar.json  100pct-bullet-column-2x.json  100pct-bullet-column-3x.json  100pct-bullet-column.json  100pct-progress-bar.json  100pct-stacked-area-2x.json  100pct-stacked-area-3x.json  100pct-stacked-bar-2x.json  100pct-stacked-bar-3x.json  100pct-stacked-column-2x.json  100pct-stacked-column-3x.json  area.json  australia.json  bar.json  box-and-whisker-2x.json  box-and-whisker-3x.json  box-and-whisker.json  bullet-bar-2x.json  bullet-bar-3x.json  bullet-bar.json  bullet-column-2x.json  bullet-column-3x.json  bullet-column.json  canada.json  clustered-bar-2x.json  clustered-column.json  column.json  dot-plot-2x.json  dot-plot-3x.json  dot-plot-4x.json  dot-plot-5x.json  dot-plot-6x.json  dot-plot.json  doughnut.json  dumbbell.json  filled-radar.json  funnel.json  histogram.json  (+37 more)
spec/color-schemes/: black-and-white.json  bold-red.json  boost.json  burnt-orange.json  cool-horizon.json  corporate-blue.json  deep-purple.json  forest-green.json  golden-yellow.json  index.json  luxury.json  (+4 more)
typescript/: .npmignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
(+819 files in other folders)
